Adicionado script de teste

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1>oi</h1>
+        <script>
+            return (1000).toLocaleString();
+        </script>
     </body>
 </html>
