Problema do Style.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="css/style2.css">
 
-        <title>Business PRO</title>
+        <title>Início - Business PRO</title>
     </head>
     <body>
 
