Melhoria do estilo do site

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style2.css">
+        <link rel="stylesheet" href="css/style3.css">
 
-        <title>Início - Business PRO</title>
+        <title>Business PRO</title>
     </head>
     <body>
 
@@ -24,6 +24,12 @@
                 </ul>
             </nav>
         </header>
+
+        <!-- Principal -->
+        <main>
+            Conteúdo do business pro muito bom
+            <a href="#"><button class="botao-primario">Criar minha conta empresarial!</button></a>
+        </main>
 
     </body>
 </html>
