--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style3.css">
+        <link rel="stylesheet" href="css/style4.css">
 
         <title>Business PRO</title>
     </head>
     <body>
 
-        <!-- Header -->
+        <!-- Cabeçalho -->
         <header>
             <nav>
                 <div class="logo">
@@ -25,9 +25,9 @@
             </nav>
         </header>
 
-        <!-- Principal -->
+        <!-- Corpo -->
         <main>
-            Conteúdo do business pro muito bom
+            Conteúdo do business pro muito bom <br>
             <a href="#"><button class="botao-primario">Criar minha conta empresarial!</button></a>
         </main>
 
