--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <a href="index.html">Business PRO</a>
                 </div>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Pesquisar</a></li>
+                    <li><a href="#" class="botao-secundario">Home</a></li>
+                    <li><a href="#" class="botao-secundario">Pesquisar</a></li>
                     <li><a href="#"><button class="botao-primario">Começar!</button></a></li>
                 </ul>
             </nav>
