--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="css/style4.css">
 
-        <title>Business PRO</title>
+        <title>Business PRO v1</title>
     </head>
     <body>
 
@@ -19,7 +19,7 @@
                 </div>
                 <ul>
                     <li><a href="#" class="botao-secundario">Home</a></li>
-                    <li><a href="#" class="botao-secundario">Pesquisar</a></li>
+                    <li><a href="#" class="formulario-campo-primario"><form><input type="text" placeholder="Pesquisar"></form></a></li>
                     <li><a href="#"><button class="botao-primario">Começar!</button></a></li>
                 </ul>
             </nav>
