Correção da barra de pesquisa

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style6.css">
+        <link rel="stylesheet" href="css/style7.css">
 
-        <title>Business PRO v1</title>
+        <title>Business PRO v7</title>
     </head>
     <body>
 
@@ -19,7 +19,7 @@
                 </div>
                 <ul>
                     <li><a href="#" class="botao-secundario">Home</a></li>
-                    <li><a href="#" class="formulario-campo-primario"><form><input type="text" placeholder="Pesquisar"></form></a></li>
+                    <li><form><input class="formulario-campo-primario" type="text" placeholder="Pesquisar"></form></li>
                     <li><a href="#"><button class="botao-primario">Começar!</button></a></li>
                 </ul>
             </nav>
