--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style13.css">
+        <link rel="stylesheet" href="css/style14.css">
 
-        <title>Business PRO v13</title>
+        <title>Business PRO v14</title>
     </head>
     <body>
 
@@ -19,7 +19,12 @@
                 </div>
                 <ul>
                     <li><a href="#" class="botao-secundario">Home</a></li>
-                    <li><form><input class="formulario-campo-primario" type="text" placeholder="Pesquisar"></form></li>
+                    <li>
+                        <form class="formulario-campo-primario">
+                            <img src="img/icon/pesquisa.png" width="15px" height="15px">
+                            <input type="text" placeholder="Pesquisar">
+                        </form>
+                    </li>
                     <li><a href="#"><button class="botao-primario">Começar!</button></a></li>
                 </ul>
             </nav>
