--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style17.css">
+        <link rel="stylesheet" href="css/style18.css">
 
-        <title>Business PRO v17</title>
+        <title>Business PRO v18</title>
     </head>
     <body>
+        <!-- Javascript-->
+        <script src="js/main.js"></script>
 
         <!-- Cabeçalho -->
         <header>
@@ -22,7 +24,7 @@
                     <li>
                         <form action="#">
                             <input class="formulario-campo-primario" type="text" placeholder="Pesquisar" name="pesquisa">
-                            <button class="botao-primario" type="submit"><img src="img/icon/pesquisa.png" width="15px" height="15px"></button>
+                            <button class="botao-primario" type="submit"><img src="img/icon/pesquisa.png" width="20px" height="20px"></button>
                         </form>
                     </li>
                     <li><a href="#"><button class="botao-primario">Começar!</button></a></li>
@@ -34,10 +36,6 @@
         <main>
             Conteúdo do business pro muito bom <br>
             <a href="#"><button class="botao-primario">Criar minha conta empresarial!</button></a> <br>
-            <?php
-                $txt = "PHP";
-                echo "I love $txt!";
-            ?>
         </main>
 
     </body>
