--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <main>
             Conteúdo do business pro muito bom <br>
             <a href="#"><button class="botao-primario">Criar minha conta empresarial!</button></a> <br>
+            <p id="javascript-teste"></p>
         </main>
 
     </body>
