--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style19.css">
+        <link rel="stylesheet" href="css/style20.css">
 
-        <title>Business PRO v19</title>
+        <title>Business PRO v20</title>
     </head>
     <body>
         <!-- Javascript-->
-        <script src="js/main.js"></script>
+        <script src="js/main20.js"></script>
 
         <!-- Cabeçalho -->
         <header>
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="#" class="botao-secundario">Home</a></li>
                     <li>
-                        <form action="#">
+                        <form action="">
                             <input class="formulario-campo-primario" type="text" placeholder="Pesquisar" name="pesquisa">
                             <button class="botao-primario" type="submit"><img src="img/icon/pesquisa.png" width="20px" height="20px"></button>
                         </form>
