--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <!-- Javascript-->
-        <script src="js/main20.js"></script>
+        <script src="js/main21.js"></script>
 
         <!-- Cabeçalho -->
         <header>
@@ -36,7 +36,7 @@
         <main>
             Conteúdo do business pro muito bom <br>
             <a href="#"><button class="botao-primario">Criar minha conta empresarial!</button></a> <br>
-            <p id="javascript-teste"></p>
+            <p class="javascript-teste"></p>
         </main>
 
     </body>
