--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style22.css">
+        <link rel="stylesheet" href="css/style23.css">
 
-        <title>Business PRO v22</title>
+        <title>Business PRO v23</title>
     </head>
     <body>
         <!-- Javascript-->
-        <script src="js/main22.js"></script>
+        <script src="js/main23.js"></script>
 
         <!-- Cabeçalho -->
         <header>
@@ -24,7 +24,7 @@
                     <li>
                         <form action="">
                             <input class="formulario-campo-primario" type="text" placeholder="Pesquisar" name="pesquisa">
-                            <button class="botao-primario" type="submit"><img src="img/icon/pesquisa.png" width="100%" height="100%"></button>
+                            <button class="botao-primario" type="submit"><img src="img/icon/pesquisa.png" width="20px" height="20px"></button>
                         </form>
                     </li>
                     <li><a href="#"><button class="botao-primario">Começar!</button></a></li>
@@ -36,7 +36,7 @@
         <main>
             Conteúdo do business pro muito bom <br>
             <a href="#"><button class="botao-primario">Criar minha conta empresarial!</button></a> <br>
-            <p id="jsteste"></p>
+            <p id="jsteste">h</p>
         </main>
 
     </body>
