--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style23.css">
+        <link rel="stylesheet" href="css/style24.css">
 
-        <title>Business PRO v23</title>
+        <title>Business PRO v24</title>
     </head>
     <body>
         <!-- Javascript-->
-        <script src="js/main23.js"></script>
+        <script src="js/main24.js"></script>
 
         <!-- Cabeçalho -->
         <header>
@@ -20,14 +20,14 @@
                     <a href="">Business PRO</a>
                 </div>
                 <ul>
-                    <li><a href="#" class="botao-secundario">Home</a></li>
+                    <li><a href="" class="botao-secundario">Home</a></li>
                     <li>
                         <form action="">
                             <input class="formulario-campo-primario" type="text" placeholder="Pesquisar" name="pesquisa">
                             <button class="botao-primario" type="submit"><img src="img/icon/pesquisa.png" width="20px" height="20px"></button>
                         </form>
                     </li>
-                    <li><a href="#"><button class="botao-primario">Começar!</button></a></li>
+                    <li><a href=""><button class="botao-primario">Começar!</button></a></li>
                 </ul>
             </nav>
         </header>
@@ -35,8 +35,10 @@
         <!-- Corpo -->
         <main>
             Conteúdo do business pro muito bom <br>
-            <a href="#"><button class="botao-primario">Criar minha conta empresarial!</button></a> <br>
-            <p id="jsteste">h</p>
+            <button class="botao-primario">Criar minha conta empresarial!</button> <br>
+            <p id="jsteste"></p> <br>
+            <button class="botao-primario" onclick="document.getElementById('jsverifyonline').innerHTML = `${(window.navigator.onLine ? 'on' : 'off') + 'line'}`">Verificar se você tem internet</button> <br>
+            <p id="jsverifyonline"><p> <br>
         </main>
 
     </body>
