Formulário horizontal flex

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
         <title>Business PRO v24</title>
     </head>
     <body>
-        <!-- Javascript-->
-        <script src="js/main24.js"></script>
 
         <!-- Cabeçalho -->
         <header>
@@ -40,6 +38,9 @@
             <button class="botao-primario" onclick="document.getElementById('jsverifyonline').innerHTML = `${(window.navigator.onLine ? 'on' : 'off') + 'line'}`">Verificar se você tem internet</button> <br>
             <p id="jsverifyonline"><p> <br>
         </main>
+
+        <!-- Javascript-->
+        <script src="js/main.js"></script>
 
     </body>
 </html>
