Pesquisa (Agora vai)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="css/style25.css">
 
-        <title>Business PRO v25.4</title>
+        <title>Business PRO v25.41</title>
     </head>
     <body>
 
@@ -22,7 +22,7 @@
                     <li>
                         <form id="cabecalhopesquisa" action="">
                             <input class="formulario-campo-primario" type="text" placeholder="Pesquisar" name="pesquisa">
-                            <button class="botao-primario" type="submit" onclick="pesquisar()"><img src="img/icon/pesquisa.png" width="20px" height="20px"></button>
+                            <button class="botao-primario" type="submit"><img src="img/icon/pesquisa.png" width="20px" height="20px"></button>
                         </form>
                     </li>
                     <li><a href=""><button class="botao-primario">Começar!</button></a></li>
