--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="" class="botao-secundario">Home</a></li>
                     <li>
-                        <form id="cabecalhopesquisa" action="">
+                        <form id="cabecalhopesquisa">
                             <input class="formulario-campo-primario" type="text" placeholder="Pesquisar" name="pesquisa">
                             <button class="botao-primario" type="submit"><img src="img/icon/pesquisa.png" width="20px" height="20px"></button>
                         </form>
