--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="css/style25.css">
 
-        <title>Business PRO v25.5</title>
+        <title>Business PRO v25.6</title>
     </head>
     <body>
 
@@ -34,12 +34,12 @@
         <main>
             Conteúdo do business pro muito bom <br>
             <button class="botao-primario">Criar minha conta empresarial!</button> <br>
-            <button class="botao-primario" onclick="document.getElementById('jsverifyonline').innerHTML = `${(window.navigator.onLine ? 'on' : 'off') + 'line'}`">Verificar se você tem internet</button> <br>
+            <button class="botao-primario" onclick="verificar_internet()">Verificar se você tem internet</button> <br>
             <p id="jsverifyonline"><p> <br>
         </main>
 
         <!-- Javascript-->
-        <script src="js/main.js"></script>
+        <script src="js/main25.js"></script>
 
     </body>
 </html>
