--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="css/style.css">
 
-        <title>Business PRO v26</title>
+        <title>Business PRO v27</title>
     </head>
     <body>
 
@@ -39,7 +39,7 @@
         </main>
 
         <!-- Javascript-->
-        <script src="js/main.js"></script>
+        <script src="js/main27.js"></script>
 
     </body>
 </html>
