--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style28.css">
+        <link rel="stylesheet" href="css/style29.css">
 
-        <title>Business PRO v28</title>
+        <title>Business PRO v29</title>
     </head>
     <body>
 
@@ -28,7 +28,7 @@
                     <li><a href=""><button class="BotaoPrimario">Começar!</button></a></li>
                 </ul>
                 <div class="MenuIcone">
-                    <img src="img/icone/menu.png">
+                    <img src="img/icone/menu.png" width="20px" height="20px">
                 </div>
             </nav>
         </header>
@@ -36,13 +36,13 @@
         <!-- Corpo -->
         <main>
             Conteúdo do business pro muito bom <br>
-            <button class="BotaoPrimario">Criar minha conta empresarial!</button> <br>
+            <button class="BotaoPrimario" onclick="alert(`Função ainda não disponível!`)">Criar minha conta empresarial!</button> <br>
             <button class="BotaoPrimario" onclick="verificar_internet()">Verificar se você tem internet</button> <br>
             <p id="OnlineIndicador"><p> <br>
         </main>
 
         <!-- Javascript-->
-        <script src="js/main28.js"></script>
+        <script src="js/main29.js"></script>
 
     </body>
 </html>
