--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style29.css">
+        <link rel="stylesheet" href="css/style30.css">
 
-        <title>Business PRO v29</title>
+        <title>Business PRO v30</title>
     </head>
     <body>
 
@@ -17,7 +17,7 @@
                 <div class="Logo">
                     <a href="">Business PRO</a>
                 </div>
-                <ul>
+                <ul class="Lista">
                     <li><a href="" class="BotaoSecundario">Home</a></li>
                     <li>
                         <form id="CabecalhoPesquisa">
@@ -28,7 +28,7 @@
                     <li><a href=""><button class="BotaoPrimario">Começar!</button></a></li>
                 </ul>
                 <div class="MenuIcone">
-                    <img src="img/icone/menu.png" width="20px" height="20px">
+                    <button class="BotaoSecundario"><img src="img/icone/menu.png" width="20px" height="20px"></button>
                 </div>
             </nav>
         </header>
@@ -42,7 +42,7 @@
         </main>
 
         <!-- Javascript-->
-        <script src="js/main29.js"></script>
+        <script src="js/main30.js"></script>
 
     </body>
 </html>
