Melhorias no menu e etc

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style30.css">
+        <link rel="stylesheet" href="css/style31.css">
 
-        <title>Business PRO v30</title>
+        <title>Business PRO v31</title>
     </head>
     <body>
 
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <div class="Logo">
-                    <a href="">Business PRO</a>
+                    <a href=""><img src="img/BusinessPro.png" width="46px" height="46px"></a>
                 </div>
                 <ul class="Lista">
                     <li><a href="" class="BotaoSecundario">Home</a></li>
@@ -42,7 +42,7 @@
         </main>
 
         <!-- Javascript-->
-        <script src="js/main30.js"></script>
+        <script src="js/main31.js"></script>
 
     </body>
 </html>
