Ícone flex, melhorias no javascript, rodapé inicial (V32)

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style31.css">
+        <link rel="stylesheet" href="css/style32.css">
 
-        <title>Business PRO v31</title>
+        <title>Business PRO v32</title>
     </head>
     <body>
 
@@ -37,12 +37,17 @@
         <main>
             Conteúdo do business pro muito bom <br>
             <button class="BotaoPrimario" onclick="alert(`Função ainda não disponível!`)">Criar minha conta empresarial!</button> <br>
-            <button class="BotaoPrimario" onclick="verificar_internet()">Verificar se você tem internet</button> <br>
+            <button class="BotaoPrimario" id="BotaoVerificarInternet">Verificar se você tem internet</button> <br>
             <p id="OnlineIndicador"><p> <br>
         </main>
 
+        <!-- Rodapé -->
+        <footer>
+            Rodapé teste
+        </footer>
+
         <!-- Javascript-->
-        <script src="js/main31.js"></script>
+        <script src="js/main32.js"></script>
 
     </body>
 </html>
