--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style32.css">
+        <link rel="stylesheet" href="css/style.css">
 
-        <title>Business PRO v32</title>
+        <title>Business PRO v33</title>
     </head>
     <body>
 
@@ -35,19 +35,16 @@
 
         <!-- Corpo -->
         <main>
-            Conteúdo do business pro muito bom <br>
-            <button class="BotaoPrimario" onclick="alert(`Função ainda não disponível!`)">Criar minha conta empresarial!</button> <br>
-            <button class="BotaoPrimario" id="BotaoVerificarInternet">Verificar se você tem internet</button> <br>
-            <p id="OnlineIndicador"><p> <br>
+            <h1>O que é o Business PRO?</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis dignissim tortor, sit amet sagittis libero sodales sit amet. Praesent vitae elementum quam. Sed quam ante, molestie sed sollicitudin non, vulputate vel tortor. Mauris ligula felis, elementum non nibh quis, tincidunt semper odio. Fusce at cursus justo, ut suscipit sem. Curabitur eget suscipit arcu. Sed ornare consequat felis, accumsan condimentum risus efficitur sed. Duis rhoncus nisl quis magna cursus vestibulum. Curabitur vulputate, quam quis viverra egestas, diam risus facilisis leo, et sollicitudin ligula orci vel mi. Aenean sit amet felis ac purus rutrum tristique ut vitae ex.</p>
+            <h1>Como iniciar a utilização?</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis dignissim tortor, sit amet sagittis libero sodales sit amet. Praesent vitae elementum quam. Sed quam ante, molestie sed sollicitudin non, vulputate vel tortor. Mauris ligula felis, elementum non nibh quis, tincidunt semper odio. Fusce at cursus justo, ut suscipit sem. Curabitur eget suscipit arcu. Sed ornare consequat felis, accumsan condimentum risus efficitur sed. Duis rhoncus nisl quis magna cursus vestibulum. Curabitur vulputate, quam quis viverra egestas, diam risus facilisis leo, et sollicitudin ligula orci vel mi. Aenean sit amet felis ac purus rutrum tristique ut vitae ex.</p>
+            <h1>Documentação</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis dignissim tortor, sit amet sagittis libero sodales sit amet. Praesent vitae elementum quam. Sed quam ante, molestie sed sollicitudin non, vulputate vel tortor. Mauris ligula felis, elementum non nibh quis, tincidunt semper odio. Fusce at cursus justo, ut suscipit sem. Curabitur eget suscipit arcu. Sed ornare consequat felis, accumsan condimentum risus efficitur sed. Duis rhoncus nisl quis magna cursus vestibulum. Curabitur vulputate, quam quis viverra egestas, diam risus facilisis leo, et sollicitudin ligula orci vel mi. Aenean sit amet felis ac purus rutrum tristique ut vitae ex.</p>
         </main>
 
-        <!-- Rodapé -->
-        <footer>
-            Rodapé teste
-        </footer>
-
         <!-- Javascript-->
-        <script src="js/main32.js"></script>
+        <script src="js/main.js"></script>
 
     </body>
 </html>
