Melhoria nas cores e ajustes e logon (V34)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="css/style.css">
 
-        <title>Business PRO v33</title>
+        <title>Business PRO v34</title>
     </head>
     <body>
 
@@ -18,6 +18,7 @@
                     <a href=""><img src="img/BusinessPro.png" width="46px" height="46px"></a>
                 </div>
                 <ul class="Lista">
+                    <!--
                     <li><a href="" class="BotaoSecundario">Home</a></li>
                     <li>
                         <form id="CabecalhoPesquisa">
@@ -25,7 +26,8 @@
                             <button class="BotaoPrimario" type="submit"><img src="img/icone/pesquisa.png" width="20px" height="20px"></button>
                         </form>
                     </li>
-                    <li><a href=""><button class="BotaoPrimario">Começar!</button></a></li>
+                    -->
+                    <li><a href="logon"><button class="BotaoPrimario">Começar!</button></a></li>
                 </ul>
                 <div class="MenuIcone">
                     <button class="BotaoSecundario"><img src="img/icone/menu.png" width="20px" height="20px"></button>
