--- a/logon.html
+++ b/logon.html
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <div class="Logo">
-                    <a href="../"><img src="img/BusinessPro.png" width="46px" height="46px"></a>
+                    <a href="index"><img src="img/BusinessPro.png" width="46px" height="46px"></a>
                 </div>
             </nav>
         </header>
