Login e registro pt. 1

--- a/logon.html
+++ b/logon.html
@@ -22,7 +22,12 @@
 
         <!-- Corpo -->
         <main>
-            LOGIN OU REGISTRO
+            <div class="login">
+                <h1>Login</h1>
+            </div>
+            <div class="registro">
+                <h1>Registro</h1>
+            </div>
         </main>
 
         <!-- Javascript-->
