Mais seleção e login e registro

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="css/style.css">
 
-        <title>Business PRO v36</title>
+        <title>Business PRO</title>
     </head>
     <body>
 
