--- a/logon.html
+++ b/logon.html
@@ -22,9 +22,25 @@
 
         <!-- Corpo -->
         <main>
+            <!-- Seletor -->
+            <fieldset>
+                <div>
+                    <input type="checkbox" id="registrar" name="registrar" checked />
+                    <label for="registrar">Criar uma nova conta!</label>
+                </div>
+                
+                <div>
+                    <input type="checkbox" id="logar" name="logar" />
+                    <label for="logar">Eu já tenho uma conta</label>
+                </div>
+            </fieldset>
+
+            <!-- Login-->
             <div class="login">
                 <h1>Login</h1>
             </div>
+
+            <!-- Registro-->
             <div class="registro">
                 <h1>Registro</h1>
             </div>
