--- a/logon.html
+++ b/logon.html
@@ -23,17 +23,12 @@
         <!-- Corpo -->
         <main>
             <!-- Seletor -->
-            <fieldset>
-                <div>
-                    <input type="checkbox" id="registrar" name="registrar" checked />
-                    <label for="registrar">Criar uma nova conta!</label>
-                </div>
-                
-                <div>
-                    <input type="checkbox" id="logar" name="logar" />
-                    <label for="logar">Eu já tenho uma conta</label>
-                </div>
-            </fieldset>
+            <div class="LogonSeletor">
+                <input type="radio" id="registrar" name="logon_seletor" value="Registrar">
+                <label for="registrar">Criar uma nova conta!</label><br>
+                <input type="radio" id="logar" name="logon_seletor" value="Logar">
+                <label for="logar">Eu já tenho uma conta</label><br>
+            </div>
 
             <!-- Login-->
             <div class="login">
