--- a/logon.html
+++ b/logon.html
@@ -24,7 +24,7 @@
         <main>
             <!-- Seletor -->
             <div class="LogonSeletor">
-                <input type="radio" id="registrar" name="logon_seletor" value="Registrar">
+                <input type="radio" id="registrar" name="logon_seletor" value="Registrar" checked>
                 <label for="registrar">Criar uma nova conta!</label><br>
                 <input type="radio" id="logar" name="logon_seletor" value="Logar">
                 <label for="logar">Eu já tenho uma conta</label><br>
