--- a/logon.html
+++ b/logon.html
@@ -30,18 +30,23 @@
                 </div>
                 <div class="Opcao">
                     <input type="radio" id="logar" name="logon_seletor" value="Logar">
-                    <label for="logar">Eu já tenho uma conta</label><br>
+                    <label for="logar">Eu já tenho uma conta</label>
                 </div>
             </div>
 
-            <!-- Login-->
-            <div class="login">
-                <h1>Login</h1>
-            </div>
+            <!-- Ferramentas de login e registro -->
+            <div class="Logon">
+                <!-- Login-->
+                <div class="Login">
+                    <h1>Login</h1>
+                    Formulário
+                </div>
 
-            <!-- Registro-->
-            <div class="registro">
-                <h1>Registro</h1>
+                <!-- Registro-->
+                <div class="Registro">
+                    <h1>Registro</h1>
+                    Formulário
+                </div>
             </div>
         </main>
 
