--- a/index.html
+++ b/index.html
@@ -18,19 +18,17 @@
                     <a href=""><img src="img/BusinessPro.png" width="46px" height="46px"></a>
                 </div>
                 <ul class="Lista">
-                    <!--
-                    <li><a href="" class="BotaoSecundario">Home</a></li>
+                    <li><a href="" class="BotaoSecundario">Botão</a></li>
                     <li>
                         <form id="CabecalhoPesquisa">
                             <input class="FormularioCampoPrimario" type="text" placeholder="Pesquisar" name="pesquisa">
                             <button class="BotaoPrimario" type="submit"><img src="img/icone/pesquisa.png" width="20px" height="20px"></button>
                         </form>
                     </li>
-                    -->
                     <li><a href="logon"><button class="BotaoPrimario">Começar!</button></a></li>
                 </ul>
                 <div class="MenuIcone">
-                    <button class="BotaoSecundario"><img src="img/icone/menu.png" width="20px" height="20px"></button>
+                    <button class="BotaoSecundario" id="MenuIcone"><img src="img/icone/menu.png" width="20px" height="20px"></button>
                 </div>
             </nav>
         </header>
