Switch Login e Registro

--- a/logon.html
+++ b/logon.html
@@ -37,13 +37,13 @@
             <!-- Ferramentas de login e registro -->
             <div class="Logon">
                 <!-- Login-->
-                <div class="Login">
+                <div id="Login" class="LogOption">
                     <h1>Login</h1>
                     Formulário
                 </div>
 
                 <!-- Registro-->
-                <div class="Registro">
+                <div id="Registro" class="LogOption">
                     <h1>Registro</h1>
                     Formulário
                 </div>
