--- a/logon.html
+++ b/logon.html
@@ -25,30 +25,30 @@
             <!-- Seletor -->
             <div class="LogonSeletor">
                 <div class="Opcao">
-                    <input type="radio" id="registrar" name="logon_seletor" value="Registrar" checked>
+                    <input type="radio" id="RegistroOpcao" name="logon_seletor" value="Registrar" checked>
                     <label for="registrar">Criar uma nova conta!</label>
                 </div>
                 <div class="Opcao">
-                    <input type="radio" id="logar" name="logon_seletor" value="Logar">
+                    <input type="radio" id="LoginOpcao" name="logon_seletor" value="Logar">
                     <label for="logar">Eu já tenho uma conta</label>
                 </div>
             </div>
 
             <!-- Ferramentas de login e registro -->
             <div class="Logon">
-                <h1>Sei lá</h1>
 
                 <!-- Login-->
-                <div id="Login" class="LogOption">
+                <div id="LoginMenu" class="LogOption">
                     <h1>Login</h1>
                     Formulário
                 </div>
 
                 <!-- Registro-->
-                <div id="Registro" class="LogOption">
+                <div id="RegistroMenu" class="LogOption ativo">
                     <h1>Registro</h1>
                     Formulário
                 </div>
+                
             </div>
         </main>
 
