Switch registro e login

--- a/logon.html
+++ b/logon.html
@@ -40,15 +40,15 @@
                 <!-- Login-->
                 <div id="LoginMenu" class="LogOption">
                     <h1>Login</h1>
-                    Formulário
+                    bbbb
                 </div>
 
                 <!-- Registro-->
                 <div id="RegistroMenu" class="LogOption ativo">
                     <h1>Registro</h1>
-                    Formulário
+                    aaaa
                 </div>
-                
+
             </div>
         </main>
 
