Alternar entre registro e login

--- a/logon.html
+++ b/logon.html
@@ -26,11 +26,11 @@
             <div class="LogonSeletor">
                 <div class="Opcao">
                     <input type="radio" id="RegistroOpcao" name="logon_seletor" value="Registrar" checked>
-                    <label for="registrar">Criar uma nova conta!</label>
+                    <label for="RegistroOpcao">Criar uma nova conta!</label>
                 </div>
                 <div class="Opcao">
                     <input type="radio" id="LoginOpcao" name="logon_seletor" value="Logar">
-                    <label for="logar">Eu já tenho uma conta</label>
+                    <label for="LoginOpcao">Eu já tenho uma conta</label>
                 </div>
             </div>
 
