--- a/logon.html
+++ b/logon.html
@@ -40,13 +40,13 @@
                 <!-- Login-->
                 <div id="LoginMenu" class="LogOption">
                     <h1>Login</h1>
-                    g
+                    Formulário de login
                 </div>
 
                 <!-- Registro-->
-                <div id="RegistroMenu" class="LogOption ativo">
+                <div id="RegistroMenu" class="LogOption">
                     <h1>Registro</h1>
-                    g
+                    Formulário de registro
                 </div>
 
             </div>
