Selecionar entre login ou registro

--- a/logon.html
+++ b/logon.html
@@ -24,14 +24,8 @@
         <main>
             <!-- Seletor -->
             <div class="LogonSeletor">
-                <div class="Opcao">
-                    <input type="radio" id="RegistroOpcao" name="logon_seletor" value="Registrar" checked>
-                    <label for="RegistroOpcao">Criar uma nova conta!</label>
-                </div>
-                <div class="Opcao">
-                    <input type="radio" id="LoginOpcao" name="logon_seletor" value="Logar">
-                    <label for="LoginOpcao">Eu já tenho uma conta</label>
-                </div>
+                <input type="button" class="Opcao" id="RegistroOpcao">Criar nova conta</button>
+                <input type="button" class="Opcao" id="LoginOpcao">Eu já tenho conta</button>
             </div>
 
             <!-- Ferramentas de login e registro -->
