--- a/logon.html
+++ b/logon.html
@@ -34,13 +34,13 @@
                 <!-- Login-->
                 <div id="LoginMenu" class="LogOption">
                     <h1>Login</h1>
-                    Formulário de login
+                    Form.ulário de login
                 </div>
 
                 <!-- Registro-->
                 <div id="RegistroMenu" class="LogOption">
                     <h1>Registro</h1>
-                    Formulário de registro
+                    Form.ulário de registro
                 </div>
 
             </div>
