Ativo por padrão

--- a/logon.html
+++ b/logon.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <!-- Registro-->
-                <div id="RegistroMenu" class="LogOption">
+                <div id="RegistroMenu" class="LogOption ativo">
                     <h1>Registro</h1>
                     Form.ulário de registro
                 </div>
