--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="css/style.css">
 
         <title>Business PRO</title>
+        <link rel="shortcut icon" href="img/BusinessPro.png">
     </head>
     <body>
 
