--- a/logon.html
+++ b/logon.html
@@ -25,8 +25,8 @@
         <main>
             <!-- Seletor -->
             <div class="LogonSeletor">
-                <input type="button" class="Opcao" id="RegistroOpcao">Criar nova conta</button>
-                <input type="button" class="Opcao" id="LoginOpcao">Eu já tenho conta</button>
+                <button class="Opcao" id="RegistroOpcao">Registro</button>
+                <button class="Opcao" id="LoginOpcao">Login</button>
             </div>
 
             <!-- Ferramentas de login e registro -->
