Funciona por favor

--- a/logon.html
+++ b/logon.html
@@ -35,13 +35,13 @@
                 <!-- Login-->
                 <div id="LoginMenu" class="LogOption">
                     <h1>Login</h1>
-                    Form.ulário de login
+                    Form
                 </div>
 
                 <!-- Registro-->
                 <div id="RegistroMenu" class="LogOption ativo">
                     <h1>Registro</h1>
-                    Form.ulário de registro
+                    Form
                 </div>
 
             </div>
