Ativo por padrão

--- a/logon.html
+++ b/logon.html
@@ -25,8 +25,8 @@
         <main>
             <!-- Seletor -->
             <div class="LogonSeletor">
-                <button class="Opcao" id="RegistroOpcao">Registro</button>
-                <button class="Opcao" id="LoginOpcao">Login</button>
+                <button class="Opcao ativo" id="RegistroOpcao">Criar conta nova</button>
+                <button class="Opcao" id="LoginOpcao">Eu já tenho uma conta</button>
             </div>
 
             <!-- Ferramentas de login e registro -->
