--- a/logon.html
+++ b/logon.html
@@ -35,20 +35,20 @@
                 <!-- Login-->
                 <div id="LoginMenu" class="LogOption">
                     <h1>Login</h1>
-                    Form
+                    Formulário!
                 </div>
 
                 <!-- Registro-->
                 <div id="RegistroMenu" class="LogOption ativo">
                     <h1>Registro</h1>
-                    Form
+                    Formulário!
                 </div>
 
             </div>
         </main>
 
         <!-- Javascript-->
-        <script src="js/main.js"></script>
+        <script src="js/logon.js"></script>
 
     </body>
 </html>
