--- a/logon.html
+++ b/logon.html
@@ -35,13 +35,23 @@
                 <!-- Login-->
                 <div id="LoginMenu" class="LogOption">
                     <h1>Login</h1>
-                    Formulário!
+                    <form>
+
+                    </form>
                 </div>
 
                 <!-- Registro-->
                 <div id="RegistroMenu" class="LogOption ativo">
-                    <h1>Registro</h1>
-                    Formulário!
+                    <h1>Criar uma nova conta</h1>
+                    <form>
+                        <input type="text" id="nome" name="nome" placeholder="Ovídio Antoninho Marques">
+                        <label for="nome">Nome</label>
+                        <input type="email" id="email" name="email" placeholder="fulano@email.com">
+                        <label for="email">E-mail</label>
+                        <input type="password" id="senha" name="senha" placeholder="****">
+                        <label for="senha">Senha</label>
+                        <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
+                    </form>
                 </div>
 
             </div>
