--- a/logon.html
+++ b/logon.html
@@ -44,12 +44,12 @@
                 <div id="RegistroMenu" class="LogOption ativo">
                     <h1>Criar uma nova conta</h1>
                     <form>
-                        <label for="nome">Nome</label>
-                        <input type="text" id="nome" name="nome" placeholder="Ovídio Antoninho Marques">
-                        <label for="email">E-mail</label>
-                        <input type="email" id="email" name="email" placeholder="fulano@email.com">
-                        <label for="senha">Senha</label>
-                        <input type="password" id="senha" name="senha" placeholder="****">
+                        <label for="nome">Nome</label><br>
+                        <input type="text" id="nome" name="nome" placeholder="Ovídio Antoninho Marques"><br>
+                        <label for="email">E-mail</label><br>
+                        <input type="email" id="email" name="email" placeholder="fulano@email.com"><br>
+                        <label for="senha">Senha</label><br>
+                        <input type="password" id="senha" name="senha" placeholder="****"><br>
                         <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
                     </form>
                 </div>
