--- a/logon.html
+++ b/logon.html
@@ -25,8 +25,8 @@
         <main>
             <!-- Seletor -->
             <div class="LogonSeletor">
-                <button class="Opcao ativo" id="RegistroOpcao">Criar conta nova</button>
-                <button class="Opcao" id="LoginOpcao">Eu já tenho uma conta</button>
+                <button class="Opcao ativo" id="RegistroOpcao">cadastro</button>
+                <button class="Opcao" id="LoginOpcao">login</button>
             </div>
 
             <!-- Ferramentas de login e registro -->
@@ -44,12 +44,16 @@
                 <div id="RegistroMenu" class="LogOption ativo">
                     <h1>Criar uma nova conta</h1>
                     <form>
-                        <label for="nome">Nome</label><br>
-                        <input type="text" id="nome" name="nome" placeholder="Ovídio Antoninho Marques"><br>
-                        <label for="email">E-mail</label><br>
-                        <input type="email" id="email" name="email" placeholder="fulano@email.com"><br>
-                        <label for="senha">Senha</label><br>
-                        <input type="password" id="senha" name="senha" placeholder="****"><br>
+                        <label for="Nome">Nome</label><br>
+                        <input type="text" id="Nome" name="nome" placeholder="Ovídio Antoninho Marques"><br>
+
+                        <label for="Email">E-mail</label><br>
+                        <input type="email" id="Email" name="email" placeholder="fulano@email.com"><br>
+
+                        <label for="Senha">Senha</label><br>
+                        <input type="password" id="Senha" name="senha" placeholder="****">
+                        <button class="ExibirSenha" id="ExibirSenha" type="submit"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button>
+                        <br>
                         <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
                     </form>
                 </div>
