Mais CSS e botão

--- a/logon.html
+++ b/logon.html
@@ -25,8 +25,8 @@
         <main>
             <!-- Seletor -->
             <div class="LogonSeletor">
-                <button class="Opcao ativo" id="RegistroOpcao">cadastro</button>
-                <button class="Opcao" id="LoginOpcao">login</button>
+                <button class="Opcao ativo" id="RegistroOpcao">cadastrar nova conta</button>
+                <button class="Opcao" id="LoginOpcao">entrar em conta existente</button>
             </div>
 
             <!-- Ferramentas de login e registro -->
@@ -52,7 +52,7 @@
 
                         <label for="Senha">Senha</label><br>
                         <input type="password" id="Senha" name="senha" placeholder="****">
-                        <button class="ExibirSenha" id="ExibirSenha" type="submit"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button>
+                        <button class="ExibirSenha" id="ExibirSenha" type="button"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button>
                         <br>
                         <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
                     </form>
