Remoção da pesquisa e botão de painel de controle

--- a/logon.html
+++ b/logon.html
@@ -34,9 +34,16 @@
 
                 <!-- Login-->
                 <div id="LoginMenu" class="LogOption">
-                    <h1>Login</h1>
+                    <h1>Entrar na sua conta</h1>
                     <form>
+                        <label for="Email">E-mail</label><br>
+                        <input class="FormularioCampoPrimario" type="email" id="Email" name="email" placeholder="fulano@email.com"><br>
 
+                        <label for="Senha">Senha</label><br>
+                        <input class="FormularioCampoPrimario" type="password" id="Senha" name="senha" placeholder="****">
+                        <button class="ExibirSenha" id="ExibirSenha" type="button"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button>
+                        <br>
+                        <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
                     </form>
                 </div>
 
@@ -45,13 +52,13 @@
                     <h1>Criar uma nova conta</h1>
                     <form>
                         <label for="Nome">Nome</label><br>
-                        <input type="text" id="Nome" name="nome" placeholder="Ovídio Antoninho Marques"><br>
+                        <input class="FormularioCampoPrimario" type="text" id="Nome" name="nome" placeholder="Ovídio Antoninho Marques"><br>
 
                         <label for="Email">E-mail</label><br>
-                        <input type="email" id="Email" name="email" placeholder="fulano@email.com"><br>
+                        <input class="FormularioCampoPrimario" type="email" id="Email" name="email" placeholder="fulano@email.com"><br>
 
                         <label for="Senha">Senha</label><br>
-                        <input type="password" id="Senha" name="senha" placeholder="****">
+                        <input class="FormularioCampoPrimario" type="password" id="Senha" name="senha" placeholder="****">
                         <button class="ExibirSenha" id="ExibirSenha" type="button"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button>
                         <br>
                         <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
