--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
         <header>
             <nav>
                 <div class="Logo">
-                    <a href=""><img src="img/BusinessPro.png" width="46px" height="46px"></a>
+                    <a href="index"><img src="img/BusinessPro.png" width="46px" height="46px"></a>
                 </div>
                 <ul class="Lista">
-                    <li><a href="" class="BotaoSecundario">Botão</a></li>
+                    <li><a href="" class="BotaoSecundario">Painel de controle</a></li>
+                    <!--
                     <li>
                         <form id="CabecalhoPesquisa">
                             <input class="FormularioCampoPrimario" type="text" placeholder="Pesquisar" name="pesquisa">
                             <button class="BotaoPrimario" type="submit"><img src="img/icone/pesquisa.png" width="20px" height="20px"></button>
                         </form>
                     </li>
+                    -->
                     <li><a href="logon"><button class="BotaoPrimario">Começar!</button></a></li>
                 </ul>
                 <div class="MenuIcone">
