--- a/logon.html
+++ b/logon.html
@@ -32,36 +32,38 @@
             <!-- Ferramentas de login e registro -->
             <div class="Logon">
 
-                <!-- Login-->
-                <div id="LoginMenu" class="LogOption">
-                    <h1>Entrar na sua conta</h1>
-                    <form>
-                        <label for="Email">E-mail</label><br>
-                        <input class="FormularioCampoPrimario" type="email" id="Email" name="email" placeholder="fulano@email.com"><br>
-
-                        <label for="Senha">Senha</label><br>
-                        <input class="FormularioCampoPrimario" type="password" id="Senha" name="senha" placeholder="****">
-                        <button class="ExibirSenha" id="ExibirSenha" type="button"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button>
-                        <br>
-                        <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
-                    </form>
-                </div>
-
                 <!-- Registro-->
                 <div id="RegistroMenu" class="LogOption ativo">
                     <h1>Criar uma nova conta</h1>
                     <form>
-                        <label for="Nome">Nome</label><br>
-                        <input class="FormularioCampoPrimario" type="text" id="Nome" name="nome" placeholder="Ovídio Antoninho Marques"><br>
+                        <label for="NomeR">Nome</label><br>
+                        <input class="FormularioCampoPrimario" type="text" id="NomeR" name="nome" placeholder="Ovídio Antoninho Marques"><br>
 
-                        <label for="Email">E-mail</label><br>
-                        <input class="FormularioCampoPrimario" type="email" id="Email" name="email" placeholder="fulano@email.com"><br>
+                        <label for="EmailR">E-mail</label><br>
+                        <input class="FormularioCampoPrimario" type="email" id="EmailR" name="email" placeholder="fulano@email.com"><br>
 
-                        <label for="Senha">Senha</label><br>
-                        <input class="FormularioCampoPrimario" type="password" id="Senha" name="senha" placeholder="****">
-                        <button class="ExibirSenha" id="ExibirSenha" type="button"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button>
-                        <br>
-                        <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
+                        <label for="SenhaR">Senha</label><br>
+                        <input class="FormularioCampoPrimario" type="password" id="SenhaR" name="senha" placeholder="****">
+                        <button class="ExibirSenha" id="ExibirSenhaR" type="button"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button><br>
+
+                        <input type="hidden" name="tipo" value="cadastro">
+                        <button class="BotaoPrimario" type="submit">Realizar cadastro!</button>
+                    </form>
+                </div>
+
+                <!-- Login-->
+                <div id="LoginMenu" class="LogOption">
+                    <h1>Entrar na sua conta</h1>
+                    <form>
+                        <label for="EmailL">E-mail</label><br>
+                        <input class="FormularioCampoPrimario" type="email" id="EmailL" name="email" placeholder="fulano@email.com"><br>
+
+                        <label for="SenhaL">Senha</label><br>
+                        <input class="FormularioCampoPrimario" type="password" id="SenhaL" name="senha" placeholder="****">
+                        <button class="ExibirSenha" id="ExibirSenhaL" type="button"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button><br>
+
+                        <input type="hidden" name="tipo" value="login">
+                        <button class="BotaoPrimario" type="submit">Entrar!</button>
                     </form>
                 </div>
 
