Exibir senha mal encaixado

--- a/logon.html
+++ b/logon.html
@@ -47,7 +47,7 @@
                         <button class="ExibirSenha" id="ExibirSenhaR" type="button"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button><br>
 
                         <input type="hidden" name="tipo" value="cadastro">
-                        <button class="BotaoPrimario" type="submit">Realizar cadastro!</button>
+                        <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
                     </form>
                 </div>
 
@@ -63,7 +63,7 @@
                         <button class="ExibirSenha" id="ExibirSenhaL" type="button"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button><br>
 
                         <input type="hidden" name="tipo" value="login">
-                        <button class="BotaoPrimario" type="submit">Entrar!</button>
+                        <button class="BotaoPrimario" type="submit">Entrar</button>
                     </form>
                 </div>
 
